--- a/api/.gitignore
+++ b/api/.gitignore
@@ -2,9 +2,6 @@
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
@@ -13,12 +10,11 @@ dist-ssr
 *.local
 
 # compiled output
-/node_modules
+node_modules
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
 .DS_Store
 *.suo
 *.ntvs*
