Setup rtk-query

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
     build:
       context: ./app
       dockerfile: Dockerfile.local
+    env_file:
+      - ./app/.env.local
     ports:
       - 5173:5173
     volumes:
