--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -30,7 +30,9 @@
       "@resources": ["res"],
       "@resources/*": ["res/*"],
       "@store": ["store"],
-      "@store/*": ["store/*"]
+      "@store/*": ["store/*"],
+      "@config": ["config"],
+      "@config/*": ["config/*"]
     }
   },
   "include": ["src", "**/*.ts", "**/*.tsx", "src/**/*"],
