--- a/api/package.json
+++ b/api/package.json
@@ -29,15 +29,18 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
     "@prisma/client": "^4.7.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "luxon": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
+    "@darraghor/eslint-plugin-nestjs-typed": "^3.17.1",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
