--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,9 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
+    "@react-oauth/google": "^0.5.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
