--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^4.7.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "csv-parse": "^5.3.6",
     "luxon": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -47,6 +48,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/luxon": "^3.1.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
