--- a/api/Dockerfile.local
+++ b/api/Dockerfile.local
@@ -1,35 +1,19 @@
-###################
-# BUILD FOR LOCAL DEVELOPMENT
-###################
-
-FROM node:18 As development
+FROM node:18 AS development
 
 
 # add `/usr/src/app/node_modules/.bin` to $PATH
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
-# Required for Prisma Client to work in container
+# Required for Prisma Client to work in the container
 RUN apt-get update && apt-get install -y openssl && apt-get install -y netcat
 
 WORKDIR /usr/src/app
 
 COPY --chown=node:node . .
+RUN rm -rf node_modules
 
 RUN npm install
 
-RUN npm run prisma:generate
+RUN npm run prisma:generate 
 
 USER node
-
-###################
-# PRODUCTION
-###################
-
-FROM node:18-alpine As production
-
-# Copy the bundled code from the build stage to the production image
-COPY --chown=node:node --from=build /usr/src/app/node_modules ./node_modules
-COPY --chown=node:node --from=build /usr/src/app/dist ./dist
-
-# Start the server using the production build
-CMD [ "node", "dist/main.js" ]
