--- a/api/package.json
+++ b/api/package.json
@@ -89,7 +89,6 @@
     }
   },
   "prisma": {
-    "seed": "ts-node src/database/seed.ts",
-    "schema": "src/database/schema.prisma"
+    "seed": "ts-node src/database/seed.ts"
   }
 }
