--- a/app/package.json
+++ b/app/package.json
@@ -28,12 +28,12 @@
     "react-icons": "^4.8.0",
     "react-number-format": "^5.1.4",
     "react-redux": "^8.0.5",
+    "tailwindcss-rtl": "^0.9.0",
     "typescript": "5.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1",
-    "tailwindcss-rtl": "^0.9.0"
+    "tailwindcss": "^3.3.1"
   }
 }
