--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -49,7 +49,7 @@ services:
       context: ./app
       dockerfile: Dockerfile
     env_file:
-      - ./app/.env.prod
+      - ./app/.env.local.prod
     ports:
       - 5173:5173
 
