--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -34,6 +34,7 @@ COPY --chown=node:node package*.json ./
 
 # In order to run `npm run build` we need access to the Nest CLI which is a dev dependency. In the previous development stage we ran `npm ci` which installed all dependencies, so we can copy over the node_modules directory from the development image
 COPY --chown=node:node --from=development /usr/src/app/node_modules ./node_modules
+COPY --chown=node:node --from=development /usr/src/app/prisma ./prisma
 
 COPY --chown=node:node . .
 
@@ -53,10 +54,12 @@ USER node
 ###################
 
 FROM node:18-alpine AS production
+RUN apk --no-cache add netcat-openbsd
 
 # Copy the bundled code from the build stage to the production image
 COPY --chown=node:node --from=build /usr/src/app/node_modules ./node_modules
 COPY --chown=node:node --from=build /usr/src/app/dist ./dist
+COPY --chown=node:node --from=build /usr/src/app/prisma ./prisma
+COPY --chown=node:node --from=build /usr/src/app/init.sh ./init.sh
+COPY --chown=node:node --from=build /usr/src/app/package.json ./package.json
 
-# Start the server using the production build
-CMD ["node", "dist/main.js" ]
