--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,20 +29,16 @@ services:
     build:
       context: ./api
       dockerfile: Dockerfile
-      target: development
     depends_on:
       - db
     env_file: # used in the host machine
       - ./api/.env.local.prod
     environment: # used inside the container
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public
-    command: npm run start:dev
+    command: npm run start:prod
     ports:
       - 3000:3000
       - 5555:5555 # prisma studio
-    volumes:
-      - ./api/:/usr/src/app/
-      - /usr/src/app/node_modules
 
   app:
     build:
