--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
     "prisma:migrate:create": "prisma migrate dev --name -n",
     "prisma:seed": "prisma db seed",
     "prisma:studio": "prisma studio"
