--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,40 +1,41 @@
 version: "3"
 
 services:
-  db:
-    image: postgres:13.5
+  postgres:
+    build:
+      context: ./postgres
+      dockerfile: Dockerfile
     restart: always
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - ./postgres/.env.local.prod
     volumes:
       - postgres:/var/lib/postgresql/data
     ports:
       - 5432:5432
 
   pgadmin:
-    image: dpage/pgadmin4
+    build:
+      context: ./pgadmin
+      dockerfile: Dockerfile
     restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    env_file:
+      - ./pgadmin/.env.local.prod
     ports:
       - 5050:80
     command: ["executable", "arg"]
     depends_on:
-      - db
+      - postgres
 
   api:
     build:
       context: ./api
       dockerfile: Dockerfile
     depends_on:
-      - db
+      - postgres
     env_file: # used in the host machine
       - ./api/.env.local.prod
     environment: # used inside the container
-      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public
+      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public
     ports:
       - 3000:3000
       - 5555:5555 # prisma studio
