--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,14 +33,12 @@ services:
       target: development
     depends_on:
       - postgres
-    env_file: # used in the host machine
+    env_file:
       - ./api/.env.local
-    environment: # used inside the container
-      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public
     ports:
       - 3000:3000
       - 5555:5555 # prisma studio
-      - 9230:9230 # debug port server
+      - 9230:9230 # debug port
     volumes:
       - ./api/:/usr/src/app/
       - /usr/src/app/node_modules
