--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:migrate:prod": "prisma migrate deploy",
-    "prisma:migrate:create": "prisma migrate dev --name -n",
+    "prisma:migration": "prisma migrate dev --create-only",
     "prisma:seed": "prisma db seed",
     "prisma:studio": "prisma studio"
   },
