--- a/api/package.json
+++ b/api/package.json
@@ -40,7 +40,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.6.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@darraghor/eslint-plugin-nestjs-typed": "^3.19.0",
