--- a/docker-compose.github.yml
+++ b/docker-compose.github.yml
@@ -11,39 +11,39 @@ services:
     ports:
       - 5432:5432
 
-  pgadmin:
-    build:
-      context: ./pgadmin
-      dockerfile: Dockerfile.github
-    restart: always
-    ports:
-      - 5050:80
-    command: ["executable", "arg"]
-    depends_on:
-      - postgres
+  # pgadmin:
+  #   build:
+  #     context: ./pgadmin
+  #     dockerfile: Dockerfile.github
+  #   restart: always
+  #   ports:
+  #     - 5050:80
+  #   command: ["executable", "arg"]
+  #   depends_on:
+  #     - postgres
 
-  api:
-    build:
-      context: ./api
-      dockerfile: Dockerfile.github
-    depends_on:
-      - postgres
-    ports:
-      - 3000:3000
+  # api:
+  #   build:
+  #     context: ./api
+  #     dockerfile: Dockerfile.github
+  #   depends_on:
+  #     - postgres
+  #   ports:
+  #     - 3000:3000
 
-  app:
-    build:
-      context: ./app
-      dockerfile: Dockerfile.github
-    ports:
-      - 5173:5173
+  # app:
+  #   build:
+  #     context: ./app
+  #     dockerfile: Dockerfile.github
+  #   ports:
+  #     - 5173:5173
 
-  admin:
-    build:
-      context: ./admin
-      dockerfile: Dockerfile.github
-    ports:
-      - 6173:6173
+  # admin:
+  #   build:
+  #     context: ./admin
+  #     dockerfile: Dockerfile.github
+  #   ports:
+  #     - 6173:6173
 
 volumes:
   postgres:
