--- a/postgres/Dockerfile.github
+++ b/postgres/Dockerfile.github
@@ -4,6 +4,10 @@ RUN apt-get update && apt-get install -y netcat
 
 COPY . .
 
+RUN --mount=type=secret,id=POSTGRES_SERVICE__POSTGRES_USER \
+   export POSTGRES_USER=$(cat /run/secrets/POSTGRES_SERVICE__POSTGRES_USER) && \
+   echo $POSTGRES_USER
+
 # RUN --mount=type=secret,id=POSTGRES_SERVICE__POSTGRES_USER \
 #   --mount=type=secret,id=POSTGRES_SERVICE__POSTGRES_PASSWORD \
 #   --mount=type=secret,id=POSTGRES_SERVICE__POSTGRES_DB \
