--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          "POSTGRES_SERVICE__POSTGRES_USER=${{ secrets.POSTGRES_SERVICE__POSTGRES_USER }}"
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
