--- a/docker-compose.github.yml
+++ b/docker-compose.github.yml
@@ -4,7 +4,7 @@ services:
   postgres:
     build:
       context: ./postgres
-      dockerfile: Dockerfile.github
+      dockerfile: Dockerfile
     restart: always
     volumes:
       - postgres:/var/lib/postgresql/data
