--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,4 +36,4 @@ jobs:
 
       - name: Build and push Docker images
         run: |
-          bash ./deploy.sh ${{ github.sha }}
+          bash ./deploy.sh $(echo "${{ github.sha }}" | cut -c1-7)
