--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,31 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: my-docker-hub-namespace/my-docker-hub-repository
+          images: sagik11/fitness-badge-main
 
       - name: Build and push Docker images
         run: |
           bash ./deploy.sh $(echo "${{ github.sha }}" | cut -c1-7)
+
+          name: Deploy to Linode Kubernetes
+
+  deploy:
+    name: Deploy Cluster
+    needs: push_to_registry
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Clone cluster repository
+        run: git clone git@github.com:sagiK11/fitness-badge-main-cluster.git cluster
+
+      - name: Set up Kubernetes
+        uses: azure/k8s-set-context@v1
+        with:
+          kubeconfig: ${{ secrets.KUBECONFIG_DEV }}
+          version: "1.21.0"
+
+      - name: Deploy to Linode Kubernetes
+        run: kubectl apply -f cluster/kubernetes.yaml
