--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Clone cluster repository
-        run: git clone git@github.com:sagiK11/fitness-badge-main-cluster.git cluster
+        run: git clone https://github.com/sagiK11/fitness-badge-main-cluster.git cluster
 
       - name: Set up Kubernetes
         uses: azure/k8s-set-context@v1
@@ -59,4 +59,4 @@ jobs:
 
       - name: Deploy to Linode Kubernetes
         run: |
-          bash ./k8s/deploy.sh dev
+          bash ./cluster/k8s/deploy.sh dev
