--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,8 +55,9 @@ jobs:
         uses: azure/k8s-set-context@v1
         with:
           kubeconfig: ${{ secrets.KUBECONFIG_DEV }}
-          version: "1.21.0"
+          version: "1.26.0"
 
       - name: Deploy to Linode Kubernetes
         run: |
+          chmod +x ./cluster/k8s/deploy.sh
           bash ./cluster/k8s/deploy.sh dev
