--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,5 +59,4 @@ jobs:
 
       - name: Deploy to Linode Kubernetes
         run: |
-          chmod +x ./cluster/k8s/deploy.sh
-          bash ./cluster/k8s/deploy.sh dev
+          bash ./cluster/deploy.sh dev
