--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,4 +59,5 @@ jobs:
 
       - name: Deploy to Linode Kubernetes
         run: |
-          bash ./cluster/deploy.sh dev
+          cd cluster
+          bash ./deploy.sh dev
