--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,6 @@ jobs:
 
       - name: Build and push Docker images
         run: |
-          SHA=$(echo "${{ github.sha }}" | cut -c1-7)
           bash ./push.sh latest
 
   deploy:
@@ -49,7 +48,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Clone cluster repository
-        run: git clone https://github.com/sagiK11/fitness-badge-main-cluster.git cluster
+        run: git clone https://${{ secrets.FITNESS_BADGE_MAIN_CLUSTER_TOKEN }}@github.com/sagik11/fitness-badge-main-cluster.git cluster
 
       - name: Set up Kubernetes
         uses: azure/k8s-set-context@v1
@@ -59,5 +58,4 @@ jobs:
 
       - name: Deploy to Linode Kubernetes
         run: |
-          cd cluster
-          bash ./deploy.sh dev
+          cd cluster && bash ./deploy.sh dev
