--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   build_and_push:
-    name: Push images to Docker Hub
+    name: Build and Push images to Docker Hub
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
