--- a/admin/Dockerfile.local
+++ b/admin/Dockerfile.local
@@ -1,8 +1,14 @@
-FROM node:18-alpine 
+FROM node:20.10.0-alpine3.18
+
+# set working directory
 WORKDIR /usr/src/app
 
-COPY package.json package-lock.json ./
-RUN npm install 
+# install app dependencies
+COPY package.json .
+COPY package-lock.json .
+RUN npm install --silent
 
+# copy project
+COPY . .
 
-CMD ["npm","run","dev"]
+CMD ["npm", "run" , "dev"]
