--- a/api/Dockerfile.cloud
+++ b/api/Dockerfile.cloud
@@ -2,7 +2,7 @@
 # BUILD FOR LOCAL DEVELOPMENT
 ###################
 
-FROM node:lts-alpine3.18 AS development
+FROM --platform=linux/amd64 node:lts-alpine3.18 AS development
 
 # Create app directory
 WORKDIR /usr/src/app
@@ -26,7 +26,7 @@ USER node
 # BUILD FOR PRODUCTION
 ###################
 
-FROM node:lts-alpine3.18 AS build
+FROM --platform=linux/amd64 node:lts-alpine3.18 AS build
 
 WORKDIR /usr/src/app
 
@@ -53,7 +53,7 @@ USER node
 # PRODUCTION
 ###################
 
-FROM node:lts-alpine3.18 AS production
+FROM --platform=linux/amd64 node:lts-alpine3.18 AS production
 RUN apk --no-cache add netcat-openbsd
 
 # Copy the bundled code from the build stage to the production image
