--- a/api/package.json
+++ b/api/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.14.1",
     "csv-parse": "^5.3.6",
     "luxon": "^3.1.1",
+    "node-xlsx": "^0.23.0",
     "prisma": "^5.8.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
