--- a/admin/package.json
+++ b/admin/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "tailwind-merge": "^2.2.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
