--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.8.0",
     "react-number-format": "^5.1.4",
     "react-redux": "^8.0.5",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-rtl": "^0.9.0",
     "typescript": "5.0.3"
   },
