create second stage user authorization in the api

--- a/api/package.json
+++ b/api/package.json
@@ -31,10 +31,13 @@
     "@nestjs/core": "^10.3.1",
     "@nestjs/platform-express": "^10.3.1",
     "@nestjs/swagger": "^7.2.0",
+    "@panva/hkdf": "^1.1.1",
     "@prisma/client": "^5.8.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "csv-parse": "^5.3.6",
+    "jose": "^5.2.2",
+    "jwt-decode": "^4.0.0",
     "luxon": "^3.1.1",
     "node-xlsx": "^0.23.0",
     "prisma": "^5.8.1",
