--- a/admin/.env.local.example
+++ b/admin/.env.local.example
@@ -12,7 +12,7 @@ GOOGLE_CLIENT_SECRET=
 # api
 NEXT_PUBLIC_API_ENDPOINT=
 API_ENDPOINT=
-X_API_KEY=
+NEXT_PUBLIC_X_API_KEY=
 
 # misc
 ACCESS_CONTROL_ALLOW_ORIGIN=
